--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t androidotai/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run androidotai/docker-react npm run test -- --coverage
+  - docker run -e CI=true androidotai/docker-react npm run test
